Fix some upgrade layout issues and functionality with analytics filters.

--- a/src/api-umbrella/admin-ui/app/styles/_stats.scss
+++ b/src/api-umbrella/admin-ui/app/styles/_stats.scss
@@ -23,16 +23,6 @@
 }
 
 .advanced-filter {
-  .input-append {
-    margin-bottom: 0px;
-  }
-
-  input {
-    font-size: 12px;
-    padding: 2px 3px;
-    min-height: 20px;
-  }
-
   .help-block {
     font-size: 85%;
     line-height: 110%;
