--- a/src/api-umbrella/admin-ui/app/styles/_variables_post.scss
+++ b/src/api-umbrella/admin-ui/app/styles/_variables_post.scss
@@ -1,9 +1,5 @@
 $headings-color: $text-color;
 
-$padding-base-vertical: 6px;
-$padding-large-vertical: 10px;
-$modal-inner-padding: 15px;
-
 $navbar-default-bg: lighten($gray-base, 23%);
 $navbar-default-link-hover-bg: darken($navbar-default-bg, 10%);
 $navbar-default-link-active-bg: $navbar-default-link-hover-bg;
