--- a/src/api-umbrella/admin-ui/app/styles/_variables_pre.scss
+++ b/src/api-umbrella/admin-ui/app/styles/_variables_pre.scss
@@ -1,1 +1,10 @@
 $text-color: #313131;
+
+// Use the default bootstrap padding & heights, rather than the larger defaults
+// from the Cerulean theme.
+$padding-base-vertical: 6px;
+$padding-large-vertical: 10px;
+$modal-inner-padding: 15px;
+
+// Show navbar above qtip tooltip or popovers.
+$zindex-navbar-fixed: 16000;
